--- a/style.css
+++ b/style.css
@@ -3,3 +3,22 @@ body {
   height: 100%;
   margin: 0;
 }
+h1 {
+ color: black;
+ text-align: center;
+}
+
+img {
+display: block;
+margin-left: auto;
+margin-right: auto;
+width: 50%;
+}
+
+nav {
+  text-align: center;
+  width: 100;
+  padding-left: 10px;
+  padding-right: 10px;
+  background-color: burlywood;
+}
